# AIWord

./: .gitignore  README.md  WORD_AST_SPEC.md  error.md  pyproject.toml  requirements.txt
docs/: AI_PROMPT.md  WORD_AST_SPEC.md
scripts/: ai_edit.py  convert.py
tests/: test_ai_view_merge.py  test_parser.py  test_roundtrip.py
tests/word/: Hello.docx  Hello_t.docx  document.ast.json  test1.docx  test1_t.docx  test2.docx  test2_t.docx
web/: index.html
web/src/: main.js  storageService.js  style.css
word_ast/: __init__.py  ai_merge.py
word_ast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
word_ast/parser/: __init__.py  document_parser.py  paragraph_parser.py  style_parser.py  table_parser.py
word_ast/renderer/: __init__.py  document_renderer.py  paragraph_renderer.py  table_renderer.py  toc_renderer.py
